src/css/index.css
:root {
  --compose-btn-bg-dark: #373839;
  --compose-btn-bg-dark-hover: color(var(--compose-btn-bg-dark) shade(20%));
  --compose-btn-bg-light: #707375;
  --compose-btn-bg-light-hover: color(var(--compose-btn-bg-light) shade(20%));
}

.med-tweet {
  display: none;
}

.btd__round_pic :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
  border-radius: 50%;
}

.btd__js-hidden {
  display: none !important;
}

.btd__no_col_icns .js-column-header {
  .column-type-icon {
    display: none;
  }

  h1.column-title {
      margin-left: 10px;
  }
}

.btd__no_play_btn .video-overlay.icon-with-bg-round {
  display: none;
}

.btd__gray_icns_notifs .activity-header .activity-indicator.icon {
  color: #999;
}

.btd__usrname_only_typeahed .typeahead-item {
  .fullname {
    display: none;
  }

  .username {
    color: #444;
  }
}

.btd__small_icns_compose {
  .js-add-image-button, .js-schedule-button, .js-tweet-type-button > button {
    width: auto !important;
    float: left !important;
    margin-right: 4px;

    .label {
      display: none;
    }
  }
}

.btd__minimal_mode {
  .app-columns {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    padding-left: 0 !important;
  }

  .column {
    margin-right: 0 !important;
  }

  a[rel="viewDetails"] {
    opacity: 0 !important;
  }

  .stream-item {
    border-bottom: 0 !important;
  }

  .compose-header {
    border-bottom: 0 !important;
  }

  .mdl-media-prev, .mdl-media-next {
    background: transparent;
    z-index: 10;
  }

  .mdl-dismiss {
    bottom: 0;
    left: 0;
    right: 0;
    top: 0;

    padding-right: 7px;
    padding-top: 8px;
    z-index: 0;
    cursor: default;
    position: fixed;
    text-align: right;

    > .icon {
      cursor: pointer;
    }
  }

  .med-embeditem {
    width: auto;
    left: 50%;
    transform: translateX(-50%);
  }

  .med-tray {
    z-index: 9;
  }

  .column-header, .column-header-temp {
    background-color: transparent;
    border-bottom: 0 !important;
  }

  .drawer .compose .btn-on-blue {
    background-color: color(white alpha(15%));

    &:hover {
      background-color: color(white alpha(10%));
    }
  }

  .scroll-styled-v::-webkit-scrollbar-track,
  .scroll-styled-h::-webkit-scrollbar-track {
    border-left: 0;
  }

  .scroll-styled-v::-webkit-scrollbar {
    width: 1px;
  }

  .scroll-styled-h::-webkit-scrollbar {
    height: 0;
  }

  .needs-scroll-bottom-offset.scroll-styled-h {
    bottom: 0;
  }

  .med-fullpanel {
    box-shadow: none;
    background: transparent;
  }
}

[data-btdtheme="dark"].btd__minimal_mode {
  .btn-compose {
    background-color: var(--compose-btn-bg-dark);

    &:hover {
      background-color: var(--compose-btn-bg-dark-hover);
    }
  }

  .attach-compose-buttons .tweet-button {
    background-color: var(--compose-btn-bg-dark-hover);
  }

  .drawer .compose, .inline-reply {
    background-color: var(--compose-btn-bg-dark-hover)
  }

  .reply-triangle {
    border-color: transparent transparent var(--compose-btn-bg-dark-hover) transparent;
  }

  .media-caret {
    border-color: #222426 transparent transparent transparent;
  }
}

[data-btdtheme="light"].btd__minimal_mode {
  .btn-compose {
    background-color: var(--compose-btn-bg-light);

    &:hover {
      background-color: var(--compose-btn-bg-light-hover);
    }
  }

  .compose-text-title {
    color: #BFBFBF;
  }

  .compose-account {
    background-color: #8C8C8C;
  }

  .attach-compose-buttons .tweet-button {
    background-color: var(--compose-btn-bg-light-hover);
  }

  .drawer .compose, .inline-reply {
    background-color: var(--compose-btn-bg-light-hover);
  }

  .reply-triangle {
    border-color: transparent transparent var(--compose-btn-bg-light-hover) transparent;
  }
}

